Run benchmarks with more memory